--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 body {
-  background: #FFFFFF !important;
+  background: #1C8EF9 !important;
   min-height: 100vh;
   display: flex;
   font-weight: 400;
@@ -70,4 +70,8 @@ body, html, .App, #root, .auth-wrapper {
 
 .forgot-password a {
   color: #167bff;
+}
+
+.btn-logout {
+  margin-right: 10px;
 }
