--- a/src/assets/css/TruckDetails.module.css
+++ b/src/assets/css/TruckDetails.module.css
@@ -7,3 +7,8 @@
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     text-align: center;
 }
+
+.cancelButton {
+    float: right;
+    margin-top: 20px;
+}
